# open5gs

./: full-reinstall.sh  recompile.sh
configs/: 310014.yaml.in  csfb.yaml.in  non3gpp.yaml.in  sample.yaml.in  slice.yaml.in  srsenb.yaml.in  volte.yaml.in  vonr.yaml.in
configs/open5gs/: mme.yaml.in  sgwc.yaml.in
lib/app/: ogs-context.c
lib/core/: ogs-fsm.h  ogs-list.h  ogs-log.c  ogs-pool.h  ogs-sockaddr.c  ogs-socket.c  ogs-strings.c  ogs-timer.c
lib/crypt/: snow-3g.c
lib/gtp/: context.c  context.h  path.c  util.c  util.h  xact.c
lib/pfcp/: build.c  context.c  context.h  handler.c  path.c  rule-match.c  xact.c
lib/proto/: types.h
lib/sbc/: meson.build  message.c  message.h  ogs-sbc.h  sbc-types.h
lib/sctp/: ogs-sctp.h
src/amf/: gmm-sm.c
src/mme/: app-init.c  emm-build.c  emm-handler.c  emm-handler.h  emm-sm.c  esm-build.c  esm-handler.c  esm-sm.c  meson.build  mme-context.c  mme-context.h  mme-event.c  mme-event.h  mme-fd-path.c  mme-gtp-path.c  mme-gtp1-path.c  mme-gtp1-path.h  mme-init.c  mme-path.c  mme-s11-build.c  mme-s11-handler.c  mme-s6a-handler.c  mme-sm.c  mme-timer.c  nas-path.c  s1ap-build.c  s1ap-build.h  s1ap-handler.c  s1ap-path.c  s1ap-sm.c  sbc-build.c  sbc-build.h  sbc-handler.c  sbc-handler.h  sbc-path.c  sbc-path.h  sbc-sctp.c
src/sgwc/: context.c  context.h  gtp-path.c  meson.build  metrics.c  metrics.h  pfcp-path.c  pfcp-sm.c  s11-build.c  s11-handler.c  s5c-handler.c  sgwc-sm.c  sgwc-usage-logger.c  sgwc-usage-logger.h  sxa-build.c  sxa-handler.c
src/sgwu/: context.c  context.h  gtp-path.c  pfcp-path.c  pfcp-sm.c  (+3 more)
(+55 files in other folders)
